--- a/docs/styles.css
+++ b/docs/styles.css
@@ -6,6 +6,23 @@
     padding: 0.5em;
   }
 
+.lemma {
+    background-color: rgb(247, 247, 242);
+    padding: 0.5em;
+}
+
+.definition {
+    background-color: rgb(238, 245, 242);
+    padding: 0.5em;
+  }
+
+
+
+.exercise {
+    background-color: rgb(255, 255, 255);
+    padding: 0.5em;
+  }
+
 .deep {
   background-color: rgb(221, 235, 216);
   padding: 0.5em;
