--- a/utils/styles.css
+++ b/utils/styles.css
@@ -1,5 +1,28 @@
 /* css styles */
+body {
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 10em;
+}
+.navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
 
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
+
+.content {
+  text-align: justify;
+  display: inline-block;
+  max-width: 800px;
+  font-size: 1.1em;
+  margin-top: 10em;
+}
 
 .theorem {
     background-color: rgb(248, 239, 239);
@@ -17,7 +40,6 @@
   }
 
 
-
 .exercise {
     background-color: rgb(255, 255, 255);
     padding: 0.5em;
@@ -32,4 +54,12 @@
 .theorem .definition p {
   background-color: rgb(119, 37, 37);
   margin-top: 1em;
+}
+
+@media (max-width: 600px) {
+  .content {
+    margin-top: 2em;
+    width: 100vw; /* Ensure the content takes the full width of the viewport */
+    overflow: hidden; /* Hide overflow content */
+  }
 }
